fix(header): wrap lists if too long

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,6 +67,7 @@ ul, ol, p {
 
 ul.inline, ol.inline {
   display: inline-flex;
+  flex-wrap: wrap;
   gap: 1rlh;
   list-style: none;
   margin-block-end: 1rlh;
